fixed z-index for sign-in and sign-up

--- a/frontend/src/screens/SignUp/styles/signup.less
+++ b/frontend/src/screens/SignUp/styles/signup.less
@@ -35,7 +35,7 @@
         top: 40%;
         left: 50%;
         transform: translate(-50%, -50%);
-        
+        z-index: 2;
 
         background: #FFFFFF;
         box-shadow: -2px -2px 1px rgba(233, 233, 233, 0.25), 2px 2px 1px rgba(233, 233, 233, 0.25);
